[package]
name = "mquote-impl"
version = "0.1.0"
authors = ["Denis <dsurvived@gmail.com>"]
edition = "2018"
description = "Quasi-quoting library aimed on better readability and usability"
readme = "README.md"
keywords = ["quote", "proc-macro", "syn"]
categories = ["development-tools::procedural-macro-helpers"]
repository = "https://github.com/survived/mquote"
license = "MIT/Apache-2.0"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "0.4"
proc-macro-hack = "0.5"
quote = "0.6"
